<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music Share Sync</string>
    <string name="PasswordLabel">Password</string>
    <string name="UsernameLabel">Username</string>
    <string name="WorkgroupLabel">Workgroup</string>
    <string name="HostnameLabel">Hostname</string>
    <string name="PathLabel">Path</string>
    <string name="SaveSettingsLabel">Save</string>
    <string name="StartingPathLabel">Starting Path</string>
    <string name="preferences_remote_hostname">Test-pc</string>
    <string name="preferences_target_domain">workgroup</string>
    <string name="preferences_remote_username">guest</string>
    <string name="preferences_remote_password"></string>
    <string name="preferences_remote_basedir">/music/</string>
    <string name="preferences_local_basedir">MusicShareSync</string>
    <string name="smiley">:)</string>
    
    <string name="home_menu_sync">Start to Sync</string>
    <string name="home_menu_settings">Settings</string><string name="home_menu_delete">Delete local content</string><string name="home_menu_refresh">Refresh local content</string>
    <string name="home_menu_tree_test">Tree Test</string>
    <string name="home_menu_tree_test2">Tree Test 2</string>
    
    <integer name="progressDialogInit">0</integer>
    <integer name="progressDialogDismiss">1</integer>
    <integer name="progressDialogSetProgress">2</integer>
    <integer name="progressDialogSetSecondaryProgress">3</integer>
    <integer name="progressDialogSetTitle">4</integer>
    <integer name="progressSomethingWentWrong">5</integer>
    <string name="expand_collapse_icon">Expand collapse Icon</string>


</resources>